tests/Fase2-Semantic/error/t32-for_limit_not_integer.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        integer a;
        a = x+b;
        for i = 0, 10.3 break;
        return a;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
